# mcp-repo-insight

./: .gitignore  AGENTS.md  HOW_TO_USE.md  PROJECT_CHECKLIST.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP.md  mcp_config_example.json  pyproject.toml  repo_insight_mcp_prd.md  requirements.txt  setup.bat  setup.sh
src/repoinsight_mcp/: __init__.py  cache.py  config.py  exceptions.py  file_reader.py  github_client.py  handlers.py  main.py  models.py  search.py  server.py
